fix: z-index detail hover

--- a/resources/css/product.css
+++ b/resources/css/product.css
@@ -20,5 +20,5 @@ abbr:hover::after {
     padding: 1em;
     position: absolute;
     width: 280px;
-    z-index: 1;
+    z-index: 99;
 }
